testsuite/tests/tool-ocamlc-open/tool-ocamlc-open-error.ml
(* TEST
* setup-ocamlc.byte-build-env
** ocamlc.byte
flags = "-open F("
ocamlc_byte_exit_status = "2"
*** check-ocamlc.byte-output
*)
